# sf-gfx-old

./: .clangd  .gitignore  CMakeLists.txt  vcpkg.json
include/: graphics.h
include/glad/: glad.h
include/sf/: camera.h  graphics.h  key.h  keyboard.h  meshes.h  shaders.h  textures.h  window.h
src/: camera.c  glad.c  graphics.c  meshes.c  shaders.c  textures.c  window.c
